2005-02-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: more readonly support
	* src/NoteEdit.py: more readonly support
	* src/Sources.py: more readonly support
	* src/gramps_main.py: more readonly support
	* src/gramps.glade: more readonly support

2005-02-17 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py (write_at): Correct vertical offset.
	* src/docgen/PdfDoc.py (write_at,draw_bar): Add functions.
	* src/docgen/PSDrawDoc.py (write_at): Add function;
	(draw_bar): Support for filling with color.
	* src/ReportUtils.py (draw_legend): Correct vertical offset.

	* src/docgen/OpenOfficeDoc.py: Typo.

2005-02-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditSource.py: commit events after deleting sources
	* src/Marriage.py: disable buttons in readonly mode
	* src/EditPerson.py: disable buttons in readonly mode
	* src/Sources.py: disable buttons in readonly mode
	* src/gramps.glade: name buttons

2005-02-16  Eero Tamminen <eerot@sf>
	* src/plugins/GraphViz.py: 'pagesv' value comes from 'vpages'
	  field, not 'hpages'

2005-02-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: first pass of readonly support
	* src/GrampsInMem.py: first pass of readonly support
	* src/GrampsGEDDB.py: first pass of readonly support
	* src/GrampsXMLDB.py: first pass of readonly support
	* src/gramps.py: first pass of readonly support
	* src/FamilyView.py: first pass of readonly support
	* src/EditPerson.py: first pass of readonly support
	* src/EditPlace.py: first pass of readonly support
	* src/EditSource.py: first pass of readonly support
	* src/gramps.glade: assign names to buttons
	* src/DisplayModels.py: don't override on_row_deleted

2005-02-16 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditSource.py (DelSrcQuery.query_response): Typos.
	* src/ImageSelect.py (DeleteMediaQuery.query_response): Typo.
	* src/GrampsInMemDB.py (remove_place,remove_object): Add methods;